// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Plural render plural message 1`] = `
<I18nProvider
  dispatch={null}
  fallbackLang={null}
  initialLang="en"
  initialized={true}
  lang="en"
  translations={Object {}}
  useReducer={false}
>
  <Plural
    comment="Foo"
    condition="count"
    texts={
      Array [
        "You have {count} message",
        "You have {count} messages",
      ]
    }
    values={
      Object {
        "count": 2,
      }
    }
  >
    You have 2 messages
  </Plural>
</I18nProvider>
`;

exports[`Plural render singular message 1`] = `
<I18nProvider
  dispatch={null}
  fallbackLang={null}
  initialLang="en"
  initialized={true}
  lang="en"
  translations={Object {}}
  useReducer={false}
>
  <Plural
    comment="Foo"
    condition="count"
    texts={
      Array [
        "You have {count} message",
        "You have {count} messages",
      ]
    }
    values={
      Object {
        "count": 1,
      }
    }
  >
    You have 1 message
  </Plural>
</I18nProvider>
`;
